--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,6 +14,6 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v3
-      run: pip install pyproject.toml && python script/summary.py
+    - run: pip install pyproject.toml && python script/summary.py
     - uses: stefanzweifel/git-auto-commit-action@v4
       
