--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,8 +12,11 @@ jobs:
     permissions:
       contents: write
     steps:
+    - name: Setup Poetry
+      uses: abatilo/actions-poetry@v2
     - name: Checkout
       uses: actions/checkout@v3
-    - run: pip install pyproject.toml && python script/summary.py
+    - name: Generate index
+      run: poetry install && poetry run python script/summary.py
     - uses: stefanzweifel/git-auto-commit-action@v4
       
