--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,8 +13,7 @@ jobs:
       contents: write
     steps:
     - name: Setup Poetry
-      run: curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | python -
-           echo "$HOME/.poetry/bin" >> $GITHUB_PATH
+      run: curl -sSL https://install.python-poetry.org | python3 - && echo "$HOME/.poetry/bin" >> $GITHUB_PATH
     - name: Checkout
       uses: actions/checkout@v3
     - name: Generate index
