--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,6 @@ jobs:
     - name: Checkout
       uses: actions/checkout@v3
     - name: Generate index
-      run: poetry run python script/summary.py
+      run: ls && poetry install && poetry poetry run python script/summary.py
     - uses: stefanzweifel/git-auto-commit-action@v4
       
