--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,7 +13,7 @@ jobs:
       contents: write
     steps:
     - name: Setup Poetry
-      run: curl -sSL https://install.python-poetry.org | python3 - && echo "$HOME/.poetry/bin" >> $GITHUB_PATH
+      uses: abatilo/actions-poetry@v2
     - name: Checkout
       uses: actions/checkout@v3
     - name: Generate index
